--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta property="og:title" content="Anton Gustafsson | Developer"/>
-      <meta property="og:image" content="https://github.com/Baxtex/baxtex.github.io/blob/master/img/snapshot.PNG"/>
+      <meta property="og:image" content="https://github.com/antgustech/antgustech.github.io/blob/master/img/snapshot.PNG"/>
       <meta property="og:description" content="Anton Gustafsson"/>
-      <meta property="og:url" content="https://baxtex.github.io/" />
+      <meta property="og:url" content="https://antgustech.github.io/" />
 
       <title>Anton Gustafsson | Developer</title>
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
