--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta property="og:title" content="Anton Gustafsson | Developer"/>
-      <meta property="og:image" content="https://github.com/antgustech/antgustech.github.io/blob/master/img/snapshot.PNG"/>
-      <meta property="og:description" content="Anton Gustafsson"/>
-      <meta property="og:url" content="https://antgustech.github.io/" />
+      
+      <!--Tags for Linkedin to provide metadata-->
+      <meta name="title" property="og:title" content="Anton Gustafsson | Developer">
+      <meta name="image" property="og:image" content="https://github.com/antgustech/antgustech.github.io/blob/master/img/snapshot.PNG">
+      <meta name="content" property="og:description" content="Anton Gustafsson"/>
+      <meta name="url" property="og:url" content="https://antgustech.github.io/" />
+      <meta name="author" content="Anton Gustafsson">
 
       <title>Anton Gustafsson | Developer</title>
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
