--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       
       <!--Tags for Linkedin to provide metadata-->
       <meta name="title" property="og:title" content="Anton Gustafsson | Developer">
-      <meta name="image" property="og:image" content="https://github.com/antgustech/antgustech.github.io/blob/master/img/snapshot.PNG">
+      <meta name="image" property="og:image" content="https://github.com/antgustech/antgustech.github.io/blob/master/img/snapshot.png">
       <meta name="content" property="og:description" content="Anton Gustafsson"/>
       <meta name="url" property="og:url" content="https://antgustech.github.io/" />
       <meta name="author" content="Anton Gustafsson">
