--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +14,8 @@
 
       <title>Anton Gustafsson | Developer</title>
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-      <link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
-      <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Reem+Kufi%7CRoboto:300" rel="stylesheet">
+      <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet">
       <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/styles.css">
       <link rel="stylesheet" href="css/themes/grey-white.css">
