added back correct image and a new tag

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/styles.css">
       <link rel="stylesheet" href="css/themes/grey-white.css">
-
       <!--Tags for Linkedin to provide metadata-->
       <meta name="title" property="og:title" content="Anton Gustafsson | Developer">
+      <meta name="type" property="og:type" content="image/png"/>
+      <meta name="url" property="og:url" content="https://antgustech.github.io/" />
       <meta name="image" property="og:image" content="https://github.com/antgustech/antgustech.github.io/blob/master/img/snapshot.png">
       <meta name="content" property="og:description" content="Anton Gustafsson"/>
-      <meta name="url" property="og:url" content="https://antgustech.github.io/" />
       <meta name="author" content="Anton Gustafsson">
    </head>
    <body>
